[package]
name = "winsysutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_Debug",
]

[dependencies]
thiserror = "1.0.38"
clap = { version = "4.1.4", features = ["derive"] }